# robocup_client

./: CmakeLists.txt  README.md  package.xml
include/robocup_client/: game_control_client.h
msg/: GameControlReturn.msg
src/: game_control_client.cpp  main.cpp  receiver.cpp
